--- a/ctc.csproj
+++ b/ctc.csproj
@@ -7,4 +7,8 @@
     <ApplicationIcon>ctc_icon.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+  </ItemGroup>
+
 </Project>
