Update Location and Layouts

--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key="location" value="%USERPROFILE%\Pictures"/>
+    <add key="location_type" value="0"/>
     <add key="filetype" value="jpg"/>
     <add key="filename_format" value="{sequence}"/>
   </appSettings>
