--- a/ctc.csproj
+++ b/ctc.csproj
@@ -10,6 +10,7 @@
     <Company>kumavale</Company>
     <Description>Capture The Clipboard</Description>
     <RepositoryUrl>https://github.com/kumavale/ctc</RepositoryUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,6 +41,10 @@
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
     </None>
   </ItemGroup>
 
