--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ask_overwritten" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="digits_of_rand" Type="System.Byte" Scope="User">
+      <Value Profile="(Default)">16</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
